--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Document</title>
 </head>
-<body>
+<body class="container">
+  <h1>Hey</h1>
+  <h2>My name is Anton</h2>
+
+
+  <div class="projects">
+
+  </div>
   
+  <div class="about">
+
+  </div>
+
 </body>
 </html>
