add My Project section and styling

--- a/index.html
+++ b/index.html
@@ -6,14 +6,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Document</title>
+  <title>Portfolio</title>
 </head>
 <body class="container">
   <h1>Hey</h1>
-  <h2>My name is Anton</h2>
+  <h2>I'm Anton</h2>
+  <h2>Front End Developer</h2>
 
 
   <div class="projects">
+    <h2>My projects</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Favorite Band</h2>
+            <img src="" alt="" class="card-img">
+            <h5 class="card-text"> </h5>
+            <ul class="card-text">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <p class="card-footer"><p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Favorite Band</h2>
+            <img src="" alt="" class="card-img">
+            <h5 class="card-text"> </h5>
+            <ul class="card-text">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <p class="card-footer"><p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Favorite Band</h2>
+            <img src="" alt="" class="card-img">
+            <h5 class="card-text"> </h5>
+            <ul class="card-text">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <p class="card-footer"><p>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </div>
   
