--- a/index.html
+++ b/index.html
@@ -9,73 +9,73 @@
   <title>Portfolio</title>
 </head>
 <body class="container">
-  <h1>Hey</h1>
-  <h2>I'm Anton</h2>
-  <h2>Front End Developer</h2>
 
-
-  <div class="projects">
-    <h2>My projects</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="card-title">Favorite Band</h2>
-            <img src="" alt="" class="card-img">
-            <h5 class="card-text"> </h5>
-            <ul class="card-text">
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-            <p class="card-footer"><p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="card-title">Favorite Band</h2>
-            <img src="" alt="" class="card-img">
-            <h5 class="card-text"> </h5>
-            <ul class="card-text">
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-            <p class="card-footer"><p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="card-title">Favorite Band</h2>
-            <img src="" alt="" class="card-img">
-            <h5 class="card-text"> </h5>
-            <ul class="card-text">
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-            <p class="card-footer"><p>
-          </div>
-        </div>
-      </div>
-    </div>
-
+  <div class="">
+    <h1 class="intro">Hey</h1>
+    <h2 class="intro">I'm Anton</h2>
+    <h2 class="intro">Front End Developer</h2>
   </div>
+
+
   
+  <h2>My projects</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title text-center">Animal Shelter</h2>
+          <img src="img/animal.png" alt="Photo of the animal shelter website" class="card-img">
+          <h5 class="card-text">Technologies Used:</h5>
+          <ul class="card-text">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>MD</li>
+            <li></li>
+          </ul>
+          <p class="card-footer"><p>
+      </div>
+    </div>
+  </div>
+
+
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title text-center">Favorite Band</h2>
+          <img src="img/band.png" alt="Photo of the Favorite Band website" class="card-img">
+          <h5 class="card-text">Technologies Used:</h5>
+          <ul class="card-text">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>MD</li>
+            <li></li>
+          </ul>
+          <p class="card-footer"><p>
+      </div>
+    </div>
+  </div>
+
+
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title text-center">Vacation site</h2>
+          <img src="img/vacation.png" alt="Photo of the Vacation website" class="card-img">
+          <h5 class="card-text">Technologies Used:</h5>
+          <ul class="card-text">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>MD</li>
+            <li>Bootstrap</li>
+          </ul>
+          <p class="card-footer"><p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
   <div class="about">
 
   </div>
