add animation to the intro section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body class="container">
 
-  <div class="">
-    <h1 class="intro">Hey</h1>
-    <h2 class="intro">I'm Anton</h2>
-    <h2 class="intro">Front End Developer</h2>
+  <div class="jumbotron intro" id="intro">
+    <h1>Hey</h1>
+    <h2>I'm Anton</h2>
+    <h2 >Front End Developer</h2>
   </div>
 
 
@@ -23,8 +23,8 @@
     <div class="col-md-4">
       <div class="card">
         <div class="card-body">
-          <h2 class="card-title text-center">Animal Shelter</h2>
-          <img src="img/animal.png" alt="Photo of the animal shelter website" class="card-img">
+          <h2 class="card-title text-center"><a href="https://anton3ch.github.io/sandunes/" target="_blank">Sand Dunes</a></h2>
+          <img src="img/sand.png" alt="Photo of the sand dunes website" class="card-img">
           <h5 class="card-text">Technologies Used:</h5>
           <ul class="card-text">
             <li>HTML</li>
@@ -41,7 +41,7 @@
     <div class="col-md-4">
       <div class="card">
         <div class="card-body">
-          <h2 class="card-title text-center">Favorite Band</h2>
+          <h2 class="card-title text-center"><a href="https://anton3ch.github.io/favorite-band/" target="_blank">Favorite Band</a></h2>
           <img src="img/band.png" alt="Photo of the Favorite Band website" class="card-img">
           <h5 class="card-text">Technologies Used:</h5>
           <ul class="card-text">
@@ -59,7 +59,7 @@
     <div class="col-md-4">
       <div class="card">
         <div class="card-body">
-          <h2 class="card-title text-center">Vacation site</h2>
+          <h2 class="card-title text-center"><a href="https://anton3ch.github.io/vacation-site/" target="_blank">Vacation site</a></h2>
           <img src="img/vacation.png" alt="Photo of the Vacation website" class="card-img">
           <h5 class="card-text">Technologies Used:</h5>
           <ul class="card-text">
@@ -77,6 +77,8 @@
 
 
   <div class="about">
+    <h3>About me</h3>
+    <p></p>
 
   </div>
 
