add links and styling for them

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container">
 
-  <div class="jumbotron intro" id="intro">
+  <div class="jumbotron intro p-2" id="intro">
     <h1>Hey</h1>
     <h2>I'm Anton</h2>
     <h2 >Front End Developer</h2>
@@ -18,7 +18,7 @@
 
 
   
-  <h2>My projects</h2>
+  <h2 class="mb-3">My projects</h2>
   <div class="row">
     <div class="col-md-4">
       <div class="card">
@@ -27,10 +27,9 @@
           <img src="img/sand.png" alt="Photo of the sand dunes website" class="card-img">
           <h5 class="card-text">Technologies Used:</h5>
           <ul class="card-text">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>MD</li>
-            <li></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
+            <li><a href="https://www.markdownguide.org">MD</a></li>
           </ul>
           <p class="card-footer"><p>
       </div>
@@ -45,10 +44,9 @@
           <img src="img/band.png" alt="Photo of the Favorite Band website" class="card-img">
           <h5 class="card-text">Technologies Used:</h5>
           <ul class="card-text">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>MD</li>
-            <li></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
+            <li><a href="https://www.markdownguide.org">MD</a></li>
           </ul>
           <p class="card-footer"><p>
       </div>
@@ -63,10 +61,10 @@
           <img src="img/vacation.png" alt="Photo of the Vacation website" class="card-img">
           <h5 class="card-text">Technologies Used:</h5>
           <ul class="card-text">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>MD</li>
-            <li>Bootstrap</li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
+            <li><a href="https://www.markdownguide.org">MD</a></li>
+            <li><a href="https://getbootstrap.com">Bootstrap</a></li>
           </ul>
           <p class="card-footer"><p>
       </div>
