--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 <body class="container">
 
-  <div class="jumbotron intro p-2" id="intro">
-    <h1>Hey</h1>
-    <h2>I'm Anton</h2>
-    <h2 >Front End Developer</h2>
+  <div class="jumbotron p-2"  class="intro"id="intro">
+    <h1 class="intro">Hey</h1>
+    <img id="mephoto" src="img/tony.png" alt="Photo of me">
+    <h2 class="intro">I'm <a href="" target="_blank" id="myname">Anton</a></h2>
+    
+    <h2 class="intro">Front End Developer</h2>
+    
   </div>
 
 
@@ -31,7 +34,7 @@
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
             <li><a href="https://www.markdownguide.org">MD</a></li>
           </ul>
-          <p class="card-footer"><p>
+          <p class="card-footer text-center"><a href="">github repository</a><p>
       </div>
     </div>
   </div>
@@ -48,7 +51,7 @@
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
             <li><a href="https://www.markdownguide.org">MD</a></li>
           </ul>
-          <p class="card-footer"><p>
+          <p class="card-footer text-center"><a href="">github repository</a><p>
       </div>
     </div>
   </div>
@@ -66,7 +69,7 @@
             <li><a href="https://www.markdownguide.org">MD</a></li>
             <li><a href="https://getbootstrap.com">Bootstrap</a></li>
           </ul>
-          <p class="card-footer"><p>
+          <p class="card-footer text-center"><a href="">github repository</a><p>
       </div>
     </div>
   </div>
