add responsive design for different display sizes

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>Portfolio</title>
 </head>
-<body class="container">
+<body class="container pb-1">
 
-  <div class="jumbotron p-2"  class="intro"id="intro">
-    <h1 class="intro">Hey</h1>
-    <img id="mephoto" src="img/tony.png" alt="Photo of me">
-    <h2 class="intro">I'm <a href="" target="_blank" id="myname">Anton</a></h2>
-    
-    <h2 class="intro">Front End Developer</h2>
-    
+  <div class="jumbotron pt-2 pb-0"  class="intro"id="intro">
+    <div>
+      <h1 class="intro">Hey</h1>
+      <h2 class="intro">I'm <a href="" target="_blank" id="myname">Anton</a></h2>
+      <h2 class="intro">Front End Developer</h2>
+    </div>
+    <div class="mephotocontainer"><img id="mephoto" src="img/tony.png" alt="Photo of me"></div>
   </div>
 
 
@@ -78,10 +78,18 @@
 
 
   <div class="about">
-    <h3>About me</h3>
-    <p></p>
+    <h2 class="mt-4 mb-2">About me</h2>
+    <div class="row mb-4">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-body">
+            <p>TEXT HERE</p>
+          </div>
+        </div>
+      </div>
+    </div>   
+  </div>   
 
-  </div>
 
 </body>
 </html>
