add nav panel on the right side with links to email, github and instagram

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>Portfolio</title>
 </head>
+<header>
+  <nav>
+    <div id="icons">
+      <ul>
+        <li>
+          <a href="mailto:a@antonychase.com" target="_blank">
+            <img src="img/mail.png" alt="Mail Icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/anton3ch" target="_blank">
+            <img src="img/github.png" alt="GitHub Icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/antony.chase/" target="_blank">
+            <img src="img/instagram.png" alt="Instagram Icon">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
 <body class="container pb-1">
 
   <div class="jumbotron pt-2 pb-0"  class="intro"id="intro">
@@ -24,7 +48,7 @@
   <h2 class="mb-3">My projects</h2>
   <div class="row">
     <div class="col-md-4">
-      <div class="card">
+      <div class="card card-s">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/sandunes/" target="_blank">Sand Dunes</a></h2>
           <img src="img/sand.png" alt="Photo of the sand dunes website" class="card-img">
@@ -41,7 +65,7 @@
 
 
     <div class="col-md-4">
-      <div class="card">
+      <div class="card card-s">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/favorite-band/" target="_blank">Favorite Band</a></h2>
           <img src="img/band.png" alt="Photo of the Favorite Band website" class="card-img">
@@ -58,10 +82,16 @@
 
 
     <div class="col-md-4">
-      <div class="card">
+      <div class="card card-s">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/vacation-site/" target="_blank">Vacation site</a></h2>
-          <img src="img/vacation.png" alt="Photo of the Vacation website" class="card-img">
+          <div
+              ></div>
+             <a href="#">
+              <img class="card-img ci1" src="img/vacation.png" 
+              onmouseover="this.src='http://icons.iconarchive.com/icons/fasticon/angry-birds/128/red-bird-icon.png'"
+              onmouseout="this.src='img/vacation.png'"
+              border="0" alt="Photo of the Vacation website"/></a>
           <h5 class="card-text">Technologies Used:</h5>
           <ul class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
@@ -83,7 +113,7 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-body">
-            <p>TEXT HERE</p>
+            <p>My name is Anton. I am 25 years old. I have received an associate degree in Finance in August 2016. I had an option to continue studying and get Bachelor degree, but I've decided to go to a bootcamp instead since I wanted to work on hands-on projects, prepare for interviews, and go through internship. I am currently on the course to obtain Full Stack Web Development certification from <em>Epicodus</em>. I like hiking, traveling, coding, and learning <strong>science</strong> to have understanding of how the universe works.</p>
           </div>
         </div>
       </div>
@@ -92,4 +122,11 @@
 
 
 </body>
+<footer
+<div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.05);">
+  © 2021 Copyright:
+  <span class="text-reset fw-bold">Anton Ch</span>
+</div>
+<!-- Copyright -->
+</footer>
 </html>
