add about me section

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/sandunes/" target="_blank">Sand Dunes</a></h2>
           <img src="img/sand.png" alt="Photo of the sand dunes website" class="card-img">
           <h5 class="card-text">Technologies Used:</h5>
-          <ul class="card-text">
+          <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
             <li><a href="https://www.markdownguide.org">MD</a></li>
-          </ul>
+          </ol>
           <p class="card-footer text-center"><a href="">github repository</a><p>
       </div>
     </div>
@@ -70,11 +70,11 @@
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/favorite-band/" target="_blank">Favorite Band</a></h2>
           <img src="img/band.png" alt="Photo of the Favorite Band website" class="card-img">
           <h5 class="card-text">Technologies Used:</h5>
-          <ul class="card-text">
+          <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
             <li><a href="https://www.markdownguide.org">MD</a></li>
-          </ul>
+          </ol>
           <p class="card-footer text-center"><a href="">github repository</a><p>
       </div>
     </div>
@@ -93,12 +93,12 @@
               onmouseout="this.src='img/vacation.png'"
               border="0" alt="Photo of the Vacation website"/></a>
           <h5 class="card-text">Technologies Used:</h5>
-          <ul class="card-text">
+          <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
             <li><a href="https://www.markdownguide.org">MD</a></li>
             <li><a href="https://getbootstrap.com">Bootstrap</a></li>
-          </ul>
+          </ol>
           <p class="card-footer text-center"><a href="">github repository</a><p>
       </div>
     </div>
