add more animation and swap images on hover

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
   <h2 class="mb-3">My projects</h2>
   <div class="row">
     <div class="col-md-4">
-      <div class="card card-s">
-        <div class="card-body">
+      <div class="card card-s animate__animated animate__headShake">
+        <div class="card-body"
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/sandunes/" target="_blank">Sand Dunes</a></h2>
           <img src="img/sand.png" alt="Photo of the sand dunes website" class="card-img">
+          <h5 class="card-text">Description:</h5>
+          <p class="card-text">The website presents The Grand Sand Dune National Park. It has information on the development of this natural phenomena. </p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
@@ -65,10 +67,12 @@
 
 
     <div class="col-md-4">
-      <div class="card card-s">
+      <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/favorite-band/" target="_blank">Favorite Band</a></h2>
           <img src="img/band.png" alt="Photo of the Favorite Band website" class="card-img">
+          <h5 class="card-text">Description:</h5>
+          <p class="card-text">The website presents the band website with information on upcoming shows and links a second page with several bands.</p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
@@ -82,16 +86,18 @@
 
 
     <div class="col-md-4">
-      <div class="card card-s">
+      <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/vacation-site/" target="_blank">Vacation site</a></h2>
           <div
               ></div>
              <a href="#">
               <img class="card-img ci1" src="img/vacation.png" 
-              onmouseover="this.src='http://icons.iconarchive.com/icons/fasticon/angry-birds/128/red-bird-icon.png'"
+              onmouseover="this.src='img/git-cover.jpg'"
               onmouseout="this.src='img/vacation.png'"
               border="0" alt="Photo of the Vacation website"/></a>
+          <h5 class="card-text">Description:</h5>
+          <p class="card-text">The website helps choose a perfect destination and provides customer reviews.</p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
@@ -107,7 +113,7 @@
 
 
 
-  <div class="about">
+  <div class="about animate__animated animate__headShake">
     <h2 class="mt-4 mb-2">About me</h2>
     <div class="row mb-4">
       <div class="col-md-12">
