make changes to responsive design and readme

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="jumbotron pt-2 pb-0"  class="intro"id="intro">
     <div>
       <h1 class="intro">Hey</h1>
-      <h2 class="intro">I'm <a href="" target="_blank" id="myname">Anton</a></h2>
+      <h2 class="intro">I'm <a href="https://github.com/anton3ch" target="_blank" id="myname">Anton</a></h2>
       <h2 class="intro">Front End Developer</h2>
     </div>
     <div class="mephotocontainer"><img id="mephoto" src="img/tony.png" alt="Photo of me"></div>
@@ -49,9 +49,9 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
-        <div class="card-body"
-          <h2 class="card-title text-center"><a href="https://anton3ch.github.io/sandunes/" target="_blank">Sand Dunes</a></h2>
-          <img src="img/sand.png" alt="Photo of the sand dunes website" class="card-img">
+        <div class="card-body">
+         <h2 class="card-title text-center"><a href="https://anton3ch.github.io/sanddunes/" target="_blank">Sand Dunes</a></h2>
+          <a href="https://anton3ch.github.io/sanddunes/" target="_blank"><img class="card-img ci1" src="img/sand.png" onmouseover="this.src='img/git-cover1.png'" onmouseout="this.src='img/sand.png'" border="0" alt="Photo of the Vacation website"/></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The website presents The Grand Sand Dune National Park. It has information on the development of this natural phenomena. </p>
           <h5 class="card-text">Technologies Used:</h5>
@@ -70,7 +70,7 @@
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/favorite-band/" target="_blank">Favorite Band</a></h2>
-          <img src="img/band.png" alt="Photo of the Favorite Band website" class="card-img">
+          <a href="https://anton3ch.github.io/favorite-band/" target="_blank"><img class="card-img ci1" src="img/band.png" onmouseover="this.src='img/git-cover2.jpg'" onmouseout="this.src='img/band.png'" border="0" alt="Photo of the Vacation website"/></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The website presents the band website with information on upcoming shows and links a second page with several bands.</p>
           <h5 class="card-text">Technologies Used:</h5>
@@ -89,13 +89,7 @@
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/vacation-site/" target="_blank">Vacation site</a></h2>
-          <div
-              ></div>
-             <a href="#">
-              <img class="card-img ci1" src="img/vacation.png" 
-              onmouseover="this.src='img/git-cover.jpg'"
-              onmouseout="this.src='img/vacation.png'"
-              border="0" alt="Photo of the Vacation website"/></a>
+          <a href="https://anton3ch.github.io/vacation-site/" target="_blank"><img class="card-img ci1" src="img/vacation.png" onmouseover="this.src='img/git-cover3.jpg'" onmouseout="this.src='img/vacation.png'" border="0" alt="Photo of the Vacation website"/></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The website helps choose a perfect destination and provides customer reviews.</p>
           <h5 class="card-text">Technologies Used:</h5>
