--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>Portfolio</title>
 </head>
+
 <header>
   <nav>
     <div id="icons">
@@ -33,7 +34,6 @@
 </header>
 
 <body class="container pb-1">
-
   <div class="jumbotron pt-2 pb-0"  class="intro"id="intro">
     <div>
       <h1 class="intro">Hey</h1>
@@ -43,8 +43,6 @@
     <div class="mephotocontainer"><img id="mephoto" src="img/tony.png" alt="Photo of me"></div>
   </div>
 
-
-  
   <h2 class="mb-3">My projects</h2>
   <div class="row">
     <div class="col-md-4">
@@ -56,15 +54,14 @@
           <p class="card-text">The website presents The Grand Sand Dune National Park. It has information on the development of this natural phenomena. </p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
-            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
-            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
-            <li><a href="https://www.markdownguide.org">MD</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML" target="_blank">HTML</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a></li>
+            <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
           </ol>
           <p class="card-footer text-center"><a href="">github repository</a><p>
+        </div>
       </div>
     </div>
-  </div>
-
 
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
@@ -75,15 +72,14 @@
           <p class="card-text">The website presents the band website with information on upcoming shows and links a second page with several bands.</p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
-            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
-            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
-            <li><a href="https://www.markdownguide.org">MD</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML" target="_blank">HTML</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a></li>
+            <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
           </ol>
           <p class="card-footer text-center"><a href="">github repository</a><p>
+        </div>
       </div>
     </div>
-  </div>
-
 
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
@@ -94,18 +90,16 @@
           <p class="card-text">The website helps choose a perfect destination and provides customer reviews.</p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
-            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">HTML</a></li>
-            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
-            <li><a href="https://www.markdownguide.org">MD</a></li>
-            <li><a href="https://getbootstrap.com">Bootstrap</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML" target="_blank">HTML</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a></li>
+            <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
+            <li><a href="https://getbootstrap.com" target="_blank">Bootstrap</a></li>
           </ol>
           <p class="card-footer text-center"><a href="">github repository</a><p>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
-
 
   <div class="about animate__animated animate__headShake">
     <h2 class="mt-4 mb-2">About me</h2>
@@ -120,13 +114,9 @@
     </div>   
   </div>   
 
-
-</body>
+<body>
 <footer
-<div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.05);">
-  © 2021 Copyright:
-  <span class="text-reset fw-bold">Anton Ch</span>
-</div>
-<!-- Copyright -->
+  <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.05);"> © 2021 Copyright:<span class="text-reset fw-bold">Anton Ch</span>
+  </div>
 </footer>
 </html>
