--- a/index.html
+++ b/index.html
@@ -9,32 +9,33 @@
   <title>Portfolio</title>
 </head>
 
-<header>
-  <nav>
-    <div id="icons">
-      <ul>
-        <li>
-          <a href="mailto:a@antonychase.com" target="_blank">
-            <img src="img/mail.png" alt="Mail Icon">
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/anton3ch" target="_blank">
-            <img src="img/github.png" alt="GitHub Icon">
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/antony.chase/" target="_blank">
-            <img src="img/instagram.png" alt="Instagram Icon">
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
-
 <body class="container pb-1">
-  <div class="jumbotron pt-2 pb-0"  class="intro"id="intro">
+
+  <header>
+    <nav>
+      <div id="icons">
+        <ul>
+          <li>
+            <a href="mailto:a@antonychase.com" target="_blank">
+              <img src="img/mail.png" alt="Mail Icon">
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/anton3ch" target="_blank">
+              <img src="img/github.png" alt="GitHub Icon">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/antony.chase/" target="_blank">
+              <img src="img/instagram.png" alt="Instagram Icon">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <div class="jumbotron pt-2 pb-0"  class="intro" id="intro">
     <div>
       <h1 class="intro">Hey</h1>
       <h2 class="intro">I'm <a href="https://github.com/anton3ch" target="_blank" id="myname">Anton</a></h2>
@@ -58,7 +59,7 @@
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a></li>
             <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
           </ol>
-          <p class="card-footer text-center"><a href="">github repository</a><p>
+          <p class="card-footer text-center"><a href="">github repository</a></p>
         </div>
       </div>
     </div>
@@ -76,7 +77,7 @@
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a></li>
             <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
           </ol>
-          <p class="card-footer text-center"><a href="">github repository</a><p>
+          <p class="card-footer text-center"><a href="">github repository</a></p>
         </div>
       </div>
     </div>
@@ -95,7 +96,7 @@
             <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
             <li><a href="https://getbootstrap.com" target="_blank">Bootstrap</a></li>
           </ol>
-          <p class="card-footer text-center"><a href="">github repository</a><p>
+          <p class="card-footer text-center"><a href="">github repository</a></p>
         </div>
       </div>
     </div>
@@ -108,6 +109,7 @@
         <div class="card">
           <div class="card-body">
             <p>My name is Anton. I am 25 years old. I have received an associate degree in Finance in August 2016. I had an option to continue studying and get Bachelor degree, but I've decided to go to a bootcamp instead since I wanted to work on hands-on projects, prepare for interviews, and go through internship. I am currently on the course to obtain Full Stack Web Development certification from <em>Epicodus</em>. I like hiking, traveling, coding, and learning <strong>science</strong> to have understanding of how the universe works.</p>
+            <img class ="float" src="img/vampire.jpg" alt="vampire kid">
           </div>
         </div>
       </div>
