--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         </div>
       </div>
     </div>   
-  </div>   
-
-<body>
-<footer
+  </div>
+  
+  <footer
   <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.05);"> © 2021 Copyright:<span class="text-reset fw-bold">Anton Ch</span>
   </div>
 </footer>
+</body>
 </html>
