--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
   </header>
 
-  <div class="jumbotron pt-2 pb-0"  class="intro" id="intro">
+  <div class="jumbotron pt-2 pb-0 intro" id="intro">
     <div>
       <h1 class="intro">Hey</h1>
       <h2 class="intro">I'm <a href="https://github.com/anton3ch" target="_blank" id="myname">Anton</a></h2>
@@ -50,7 +50,7 @@
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
          <h2 class="card-title text-center"><a href="https://anton3ch.github.io/sanddunes/" target="_blank">Sand Dunes</a></h2>
-          <a href="https://anton3ch.github.io/sanddunes/" target="_blank"><img class="card-img ci1" src="img/sand.png" onmouseover="this.src='img/git-cover1.png'" onmouseout="this.src='img/sand.png'" border="0" alt="Photo of the Vacation website"/></a>
+          <a href="https://anton3ch.github.io/sanddunes/" target="_blank"><img class="card-img ci1" src="img/sand.png" onmouseover="this.src='img/git-cover1.png'" onmouseout="this.src='img/sand.png'" border="0" alt="Photo of the Vacation website"></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The website presents The Grand Sand Dune National Park. It has information on the development of this natural phenomena. </p>
           <h5 class="card-text">Technologies Used:</h5>
@@ -68,7 +68,7 @@
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/favorite-band/" target="_blank">Favorite Band</a></h2>
-          <a href="https://anton3ch.github.io/favorite-band/" target="_blank"><img class="card-img ci1" src="img/band.png" onmouseover="this.src='img/git-cover2.jpg'" onmouseout="this.src='img/band.png'" border="0" alt="Photo of the Vacation website"/></a>
+          <a href="https://anton3ch.github.io/favorite-band/" target="_blank"><img class="card-img ci1" src="img/band.png" onmouseover="this.src='img/git-cover2.jpg'" onmouseout="this.src='img/band.png'" border="0" alt="Photo of the Vacation website"></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The website presents the band website with information on upcoming shows and links a second page with several bands.</p>
           <h5 class="card-text">Technologies Used:</h5>
@@ -86,7 +86,7 @@
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
           <h2 class="card-title text-center"><a href="https://anton3ch.github.io/vacation-site/" target="_blank">Vacation site</a></h2>
-          <a href="https://anton3ch.github.io/vacation-site/" target="_blank"><img class="card-img ci1" src="img/vacation.png" onmouseover="this.src='img/git-cover3.jpg'" onmouseout="this.src='img/vacation.png'" border="0" alt="Photo of the Vacation website"/></a>
+          <a href="https://anton3ch.github.io/vacation-site/" target="_blank"><img class="card-img ci1" src="img/vacation.png" onmouseover="this.src='img/git-cover3.jpg'" onmouseout="this.src='img/vacation.png'" border="0" alt="Photo of the Vacation website"></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The website helps choose a perfect destination and provides customer reviews.</p>
           <h5 class="card-text">Technologies Used:</h5>
@@ -115,10 +115,9 @@
       </div>
     </div>   
   </div>
-  
-  <footer
-  <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.05);"> © 2021 Copyright:<span class="text-reset fw-bold">Anton Ch</span>
-  </div>
+
+  <footer class="text-center" style="background-color: rgba(0, 0, 0, 0.05);">
+    <p>© 2021 Copyright: <span class="text-reset fw-bold">Anton Ch</span></p>
 </footer>
 </body>
 </html>
