fix the copyright symbol

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </div>
 
   <footer class="text-center" style="background-color: rgba(0, 0, 0, 0.05);">
-    <p>© 2021 Copyright: <span class="text-reset fw-bold">Anton Ch</span></p>
+    <p>&#169; 2021 Copyright: <span class="text-reset fw-bold">Anton Ch</span></p>
 </footer>
 </body>
 </html>
