change one of the projects to Language Suggester, change font size for titles and round the corners of the body

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
-         <h2 class="card-title text-center"><a href="https://anton3ch.github.io/sanddunes/" target="_blank">Sand Dunes</a></h2>
+         <h3 class="card-title text-center"><a href="https://anton3ch.github.io/sanddunes/" target="_blank">Sand Dunes</a></h3>
           <a href="https://anton3ch.github.io/sanddunes/" target="_blank"><img class="card-img ci1" src="img/sand.png" onmouseover="this.src='img/git-cover1.png'" onmouseout="this.src='img/sand.png'" border="0" alt="Photo of the Vacation website"></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The website presents The Grand Sand Dune National Park. It has information on the development of this natural phenomena. </p>
@@ -67,17 +67,18 @@
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
-          <h2 class="card-title text-center"><a href="https://anton3ch.github.io/favorite-band/" target="_blank">Favorite Band</a></h2>
-          <a href="https://anton3ch.github.io/favorite-band/" target="_blank"><img class="card-img ci1" src="img/band.png" onmouseover="this.src='img/git-cover2.jpg'" onmouseout="this.src='img/band.png'" border="0" alt="Photo of the Vacation website"></a>
+          <h3 class="card-title text-center"><a href="https://anton3ch.github.io/language-suggester/" target="_blank">Language Suggester</a></h3>
+          <a href="https://anton3ch.github.io/language-suggester/" target="_blank"><img class="card-img ci1" src="img/suggester.png" onmouseover="this.src='img/git-cover2.jpg'" onmouseout="this.src='img/suggester.png'" border="0" alt="Photo of the Language Suggester website"></a>
           <h5 class="card-text">Description:</h5>
-          <p class="card-text">The website presents the band website with information on upcoming shows and links a second page with several bands.</p>
+          <p class="card-text">The website presents a Programming Language Suggester quiz that branches the website based on the user input.</p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML" target="_blank">HTML</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a></li>
-            <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
+            <li><a href="https://getbootstrap.com" target="_blank">Bootstrap</a></li>
+            <li><a href="https://www.javascript.com" target="_blank">JavaScript</a></li>
           </ol>
-          <p class="card-footer text-center"><a href="">github repository</a></p>
+          <p class="card-footer text-center"><a href="https://github.com/anton3ch/language-suggester">github repository</a></p>
         </div>
       </div>
     </div>
@@ -85,7 +86,7 @@
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
-          <h2 class="card-title text-center"><a href="https://anton3ch.github.io/vacation-site/" target="_blank">Vacation site</a></h2>
+          <h3 class="card-title text-center"><a href="https://anton3ch.github.io/vacation-site/" target="_blank">Vacation site</a></h3>
           <a href="https://anton3ch.github.io/vacation-site/" target="_blank"><img class="card-img ci1" src="img/vacation.png" onmouseover="this.src='img/git-cover3.jpg'" onmouseout="this.src='img/vacation.png'" border="0" alt="Photo of the Vacation website"></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The website helps choose a perfect destination and provides customer reviews.</p>
@@ -117,7 +118,7 @@
   </div>
 
   <footer class="text-center" style="background-color: rgba(0, 0, 0, 0.05);">
-    <p>&#169; 2021 Copyright: <span class="text-reset fw-bold">Anton Ch</span></p>
+    <p>&#169; 2022 Copyright: <span class="text-reset fw-bold">Anton Ch</span></p>
 </footer>
 </body>
 </html>
