make changes to the about me text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-body">
-            <p>My name is Anton. I am 25 years old. I have received an associate degree in Finance in August 2016. I had an option to continue studying and get Bachelor degree, but I've decided to go to a bootcamp instead since I wanted to work on hands-on projects, prepare for interviews, and go through internship. I am currently on the course to obtain Full Stack Web Development certification from <em>Epicodus</em>. I like hiking, traveling, coding, and learning <strong>science</strong> to have understanding of how the universe works.</p>
+            <p>My name is Anton. I am 25 years old. I have received an associate degree in Finance in August 2016. I had an option to continue studying and get Bachelor degree, but I've decided to go to a coding bootcamp instead since I wanted to change the field and work on hands-on projects, prepare for interviews, and go through internship. I am currently on the course to obtain Full Stack Web Development certification from <em>Epicodus</em>. I like hiking, traveling, coding, and learning <strong>science</strong> to have a better understanding of how the universe works.</p>
             <img class ="float" src="img/vampire.jpg" alt="vampire kid">
           </div>
         </div>
