--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div>
       <h1 class="intro">Hey</h1>
       <h2 class="intro">I'm <a href="https://github.com/anton3ch" target="_blank" id="myname">Anton</a></h2>
-      <h2 class="intro">Front End Developer</h2>
+      <h2 class="intro" id="intro2">Full-Stack Software Engineer</h2>
     </div>
     <div class="mephotocontainer"><img id="mephoto" src="img/tony.png" alt="Photo of me"></div>
   </div>
