replace the project with a recent one

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
-         <h3 class="card-title text-center"><a href="https://anton3ch.github.io/sanddunes/" target="_blank">Sand Dunes</a></h3>
-          <a href="https://anton3ch.github.io/sanddunes/" target="_blank"><img class="card-img ci1" src="img/sand.png" onmouseover="this.src='img/git-cover1.png'" onmouseout="this.src='img/sand.png'" border="0" alt="Photo of the Vacation website"></a>
+         <h3 class="card-title text-center"><a href="https://anton3ch.github.io/neighbor/" target="_blank">Neighborhood</a></h3>
+          <a href="https://anton3ch.github.io/neighbor/" target="_blank"><img class="card-img ci1" src="img/neighbor.png" onmouseover="this.src='img/git-cover1.png'" onmouseout="this.src='img/neighbor.png'" border="0" alt="Photo of the Neighborhood website"></a>
           <h5 class="card-text">Description:</h5>
-          <p class="card-text">The website presents The Grand Sand Dune National Park. It has information on the development of this natural phenomena. </p>
+          <p class="card-text">Neighborhood application takes a number from a user and returns a range of numbers from 0 to the user inputted number with substitutions: 'Beep,' 'Boop,' and 'Won't you be my neighbor?' instead of 1, 2, and 3 respectively.</p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML" target="_blank">HTML</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a></li>
-            <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
+            <li><a href="https://www.javascript.com" target="_blank">JavaScript</a></li>
           </ol>
-          <p class="card-footer text-center"><a href="">github repository</a></p>
+          <p class="card-footer text-center"><a href="https://github.com/anton3ch/neighbor/">github repository</a></p>
         </div>
       </div>
     </div>
