--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-body">
-            <p>My name is Anton. I am 25 years old. I have received an associate degree in Finance in August 2016. I had an option to continue studying and get Bachelor degree, but I've decided to go to a coding bootcamp instead since I wanted to change the field and work on hands-on projects, prepare for interviews, and go through internship. I am currently on the course to obtain Full Stack Web Development certification from <em>Epicodus</em>. I like hiking, traveling, coding, and learning <strong>science</strong> to have a better understanding of how the universe works.</p>
+            <p>My past experience in a variety of fields gives me an important perspective that helps elevate my projects. Being a science nerd I have an unceasing thirst for knowledge. I'm always up for a challenge and I equally enjoy working individually or as part of a team. I love building a community of like-minded people to inspire creativity, share perspectives, and exchange knowledge. I am currently studying C#, JavaScript, and React at Epicodus, a highly intensive coding boot camp, and I am beyond excited to further expand my skill set.</p>
             <img class ="float" src="img/vampire.jpg" alt="vampire kid">
           </div>
         </div>
