replace 3rd project with a more recent one

--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
-          <h3 class="card-title text-center"><a href="https://anton3ch.github.io/vacation-site/" target="_blank">Vacation site</a></h3>
-          <a href="https://anton3ch.github.io/vacation-site/" target="_blank"><img class="card-img ci1" src="img/vacation.png" onmouseover="this.src='img/git-cover3.jpg'" onmouseout="this.src='img/vacation.png'" border="0" alt="Photo of the Vacation website"></a>
+          <h3 class="card-title text-center"><a href="https://anton3ch.github.io/galactic-age/" target="_blank">Vacation site</a></h3>
+          <a href="https://anton3ch.github.io/galactic-age/" target="_blank"><img class="card-img ci1" src="img/galactic-age.png" onmouseover="this.src='img/git-cover3.jpg'" onmouseout="this.src='img/galactic-age.png'" border="0" alt="Photo of the Vacation website"></a>
           <h5 class="card-text">Description:</h5>
-          <p class="card-text">The website helps choose a perfect destination and provides customer reviews.</p>
+          <p class="card-text">The applications calculates what would user's age be on different planets based on solar years.</p>
           <h5 class="card-text">Technologies Used:</h5>
           <ol class="card-text">
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML" target="_blank">HTML</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a></li>
-            <li><a href="https://www.markdownguide.org" target="_blank">MD</a></li>
-            <li><a href="https://getbootstrap.com" target="_blank">Bootstrap</a></li>
+            <li><a href="https://www.javascript.com" target="_blank">JavaScript</a></li>
+            <li><a href="https://webpack.js.org" target="_blank">Webpack</a></li>
           </ol>
-          <p class="card-footer text-center"><a href="">github repository</a></p>
+          <p class="card-footer text-center"><a href="https://github.com/anton3ch/galactic-age/" target="_blank">github repository</a></p>
         </div>
       </div>
     </div>
