fix the prject change

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="col-md-4">
       <div class="card card-s animate__animated animate__headShake">
         <div class="card-body">
-          <h3 class="card-title text-center"><a href="https://anton3ch.github.io/galactic-age/" target="_blank">Vacation site</a></h3>
+          <h3 class="card-title text-center"><a href="https://anton3ch.github.io/galactic-age/" target="_blank">Interplanetary Age</a></h3>
           <a href="https://anton3ch.github.io/galactic-age/" target="_blank"><img class="card-img ci1" src="img/galactic-age.png" onmouseover="this.src='img/git-cover3.jpg'" onmouseout="this.src='img/galactic-age.png'" border="0" alt="Photo of the Vacation website"></a>
           <h5 class="card-text">Description:</h5>
           <p class="card-text">The applications calculates what would user's age be on different planets based on solar years.</p>
