--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="icons">
         <ul>
           <li>
-            <a href="mailto:a@antonychase.com" target="_blank">
+            <a href="mailto:a@anton-ch.com" target="_blank">
               <img src="img/mail.png" alt="Mail Icon">
             </a>
           </li>
